--- a/styles/styles.css
+++ b/styles/styles.css
@@ -6,7 +6,6 @@
 .inter {
   font-family: "Inter", sans-serif;
   font-optical-sizing: auto;
-  font-weight:400;
   font-style: normal;
 }
 .button{
@@ -26,6 +25,7 @@ nav{
     max-height: 92px;
     width: 100%;
     background-color: #1A0B2E;
+    border-bottom: 1px solid #483e55;
 }
 .navbar{
     color:#FFFFFF;
@@ -34,7 +34,6 @@ nav{
     justify-content: space-between;
     align-items: center;
     padding:1.9rem 0;
-    text-align: center;
 }
 .navbar-menu{
     display: flex;
@@ -57,17 +56,24 @@ nav{
     text-decoration: none;
     color:#FFFFFF;
 }
+
+.hamburger img{
+    display: none;
+}
 /* header style */
 .container {
     position:relative;
     display: block;
-    max-width: 1600px;
+    width: 1600px;
     width:100%;
             
 }
 .hero-bg{
+    background-size: cover;
+    background-position: center;
     width:100%;
     height: auto;
+    object-fit: cover;
  }
 
 .hero-circle {
@@ -145,3 +151,55 @@ nav{
     align-items: center;
     gap:0.5rem;
 }
+
+/* responsive brekpoints */
+
+@media screen  and (max-width:576px){
+    .navbar{
+        margin-left: 1rem ;
+        margin-bottom: 1rem;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        
+    }
+    .navbar h3{
+        padding:0.2rem 0;
+        font-size: 2rem;
+        margin-left:2rem;
+    }
+    .navbar-menu , .button-1  {
+        display:none;
+    }
+    .hamburger img{
+        display: block;
+    } 
+    .new{
+    font-size: 0.5rem;
+    padding:0.3rem 0.8rem;
+    }
+    .header-content {
+    width:24.38rem;
+    height: 5.56rem;
+    }
+    .header-content h2{
+    margin-top: 0.5rem;
+    font-size: 2.2rem;
+    }
+    .header-content p{
+    font-size: 0.5rem;
+    margin-top: 0.1rem;
+    margin-bottom: 0.5rem;
+    }
+    .Subscribe{
+    font-size: 0.6rem;
+    padding: 0.5rem 1rem;
+    }
+    .button{
+    padding: 0.5rem 1rem;
+    font-size: 0.6rem;
+
+    }
+    
+}
+
