--- a/styles/styles.css
+++ b/styles/styles.css
@@ -213,6 +213,66 @@ hr{
     font-weight: 300;
     margin-top: 1rem;
 }
+/* section-2 */
+.section-2-container{
+    background-color:#230E3D;
+    max-width: 1600px;
+    width: 100%;
+    color: #FFFFFF;
+    text-align: center;
+    padding-top: 7.5rem;
+    padding-bottom: 7.5rem;
+}
+.section-2{
+    max-width: 1200px;
+    width:100%;
+    margin: 0 auto;
+}
+.section-2 h2{
+    font-size: 3rem;
+    font-weight: bold;
+    margin-bottom: 2.5rem;
+}
+.choose-cards{
+    max-width: 1200px;
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    gap:1.9rem;
+    
+}
+.choose-card{
+    background-color: #351165;
+    padding: 2.5rem;
+    border-radius: 1.9rem;
+    text-align: left;
+}
+.choose-cards img{
+    display: block;
+    margin-bottom: 1rem;
+}
+.choose-cards h3{
+    font-size: 1.5rem;
+    margin-bottom: 1rem;
+}
+.choose-cards p{
+    font-size: 1rem;
+    font-weight: 400px;
+    line-height: 1.5rem;
+}
+.card-1{
+    padding-top: 6rem;
+    grid-row: span 2;
+}
+.card-2{
+    grid-column: span 2;
+}
+.card-3{
+    grid-column: span 2;
+}
+.card-4{
+    grid-column: span 2;
+}
+
 /* responsive brekpoints */
 
 @media screen  and (max-width:576px){
@@ -286,6 +346,27 @@ hr{
     .cards h2{
     font-size: 2.5rem;
     }
+    .section-2-container{
+    padding-top: 2.5rem;
+    padding-bottom: 2.5rem;
+}
+    .section-2 h2{
+    font-size: 2rem;
+    }
+
+    .choose-cards{
+    grid-template-columns: repeat(1,1fr);
+    gap:1rem;
+    }
+    .choose-card{
+    margin-left: 1.25rem;
+    margin-right: 1.25rem;
+    border-radius: 1rem ;
+    }
+    .choose-cards h3{
+    font-size: 1.4rem;
+    }
+
     
 }
 
