--- a/styles/styles.css
+++ b/styles/styles.css
@@ -272,7 +272,72 @@ hr{
 .card-4{
     grid-column: span 2;
 }
+/* section-3 */
+.section-3-container{
+    background-color:#1A0B2E;
+    max-width: 1600px;
+    width: 100%;
+    color: #FFFFFF;
+    text-align: center;
+    padding-top: 7.5rem;
+    padding-bottom: 7.5rem;
 
+}
+.section-3{
+    max-width: 1200px;
+    width:100%;
+    margin: 0 auto;
+}
+.section-3 h2{
+    font-size: 2.82rem;
+    font-weight: bold;
+    margin-bottom: 2.5rem;
+}
+.clock{
+    display: flex;
+    gap: 0.4rem;
+    margin-left: 1.5rem;
+    margin-right: 1.5rem;
+    margin-bottom: 1.5rem;
+    color:#00FF88;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5rem;
+}
+.episode-card iframe{
+    width:100%;
+    height: auto;
+    border-top-left-radius:10% ;
+    border-top-right-radius: 10%;
+}
+.episodes-cards{
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    text-align: left;
+    max-width: 1200px;
+     gap:1.9rem;
+    
+}
+.episode-card{
+    background-color: #250D44;
+    border-radius: 10%;
+}
+.episode-card h3{
+    font-size: 1.5rem;
+    font-weight: bold;
+    margin-top: 1.5rem;
+    margin-left: 1.5rem;
+    margin-right: 1.5rem;
+    margin-bottom: 0.75rem;
+}
+.ppp{
+    font-size: 1rem;
+    line-height: 1.5rem;
+    font-weight: 400;
+    margin-left: 1.5rem;
+    margin-right: 1.5rem;
+    margin-bottom: 0.75rem;
+}
 /* responsive brekpoints */
 
 @media screen  and (max-width:576px){
@@ -349,7 +414,7 @@ hr{
     .section-2-container{
     padding-top: 2.5rem;
     padding-bottom: 2.5rem;
-}
+    }
     .section-2 h2{
     font-size: 2rem;
     }
@@ -366,7 +431,27 @@ hr{
     .choose-cards h3{
     font-size: 1.4rem;
     }
+    .section-3-container{
+    padding-top: 2.5rem;
+    padding-bottom: 2.5rem;
 
+    }
+    .section-3 h2{
+    font-size: 2rem;
+    margin-bottom: 2rem;
+    }
+    .episodes-cards{
+    grid-template-columns: repeat(1,1fr);
+    }
+    .episode-card{
+    margin-left: 1.25rem;
+    margin-right: 1.25rem;
+    border-radius: 1rem ;
+    }
+    .episode-card iframe{
+    border-top-left-radius:1rem ;
+    border-top-right-radius: 1rem;
+    }
     
 }
 
