--- a/styles/styles.css
+++ b/styles/styles.css
@@ -338,6 +338,63 @@ hr{
     margin-right: 1.5rem;
     margin-bottom: 0.75rem;
 }
+
+/* section-4 */
+.section-4-container{
+    background-color:#1A0B2E;
+    max-width: 1600px;
+    width: 100%;
+    color: #FFFFFF;
+    text-align: center;
+    padding-bottom: 7.5rem;
+
+}
+.section-4{
+    max-width: 1200px;
+    width:100%;
+    margin: 0 auto;
+}
+.section-4 h2{
+    font-size: 3rem;
+    font-weight: bold;
+    margin-bottom: 2.5rem;
+}
+.host-details{
+    background-color: #250D44;
+    border-radius: 2rem;
+    display: flex;
+    gap:1.5rem;
+    justify-content: space-between;
+    align-items: center;
+    padding: 2.5rem;
+}
+.host-content{
+    text-align: left;
+}
+.host-content h3{
+    font-size: 2rem;
+    font-weight: bold;
+    margin-bottom: 1rem;
+}
+.host-content p{
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5rem;
+    margin-bottom: 1rem;
+}
+.host-icon{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap:0.5rem;
+    max-width: 11.5rem;
+}
+.host-icon img{
+    border: 1px solid #483e55;
+    border-radius: 50%;
+    padding:1rem ;
+    overflow:visible;
+}
 /* responsive brekpoints */
 
 @media screen  and (max-width:576px){
@@ -371,21 +428,25 @@ hr{
     }
     .header-content h2{
     margin-top: 0.5rem;
-    font-size: 2rem;
+    font-size: 2.5rem;
     }
     .header-content p{
-    font-size: 0.5rem;
+    font-size: 1rem;
     margin-top: 0.1rem;
-    margin-bottom: 0.4rem;
+    margin-bottom: 1rem;
     }
     .Subscribe{
-    font-size: 0.4rem;
-    padding: 0.3rem 0.5rem;
+    font-size: 1rem;
+    padding: 0.5rem 0.7rem;
     }
     .button{
-    padding: 0.3rem 0.5rem;
-    font-size: 0.5rem;
+    padding: 0.5rem 0.7rem;
+    font-size: 1rem;
 
+    }
+
+    .section-1-container{
+        padding-top: 7.5rem;
     }
     .section-1{
     width:100%;
@@ -395,7 +456,7 @@ hr{
     font-size: 2rem;
     }
     .section-1 p{
-    font-size: 0.8rem;
+    font-size: 1rem;
     }
     .p1{
     margin-bottom: 2rem;
@@ -424,8 +485,8 @@ hr{
     gap:1rem;
     }
     .choose-card{
-    margin-left: 1.25rem;
-    margin-right: 1.25rem;
+    margin-left: 2rem;
+    margin-right: 2rem;
     border-radius: 1rem ;
     }
     .choose-cards h3{
@@ -444,14 +505,37 @@ hr{
     grid-template-columns: repeat(1,1fr);
     }
     .episode-card{
-    margin-left: 1.25rem;
-    margin-right: 1.25rem;
+    margin-left: 2rem;
+    margin-right: 2rem;
     border-radius: 1rem ;
     }
     .episode-card iframe{
     border-top-left-radius:1rem ;
     border-top-right-radius: 1rem;
     }
-    
+
+    .section-4-container{
+    padding-bottom: 2.5rem;
+    }
+    .section-4 h2{
+    font-size: 2rem;
+    margin-bottom: 2rem;
+    }
+    .host-details{
+    border-radius: 1rem;
+    flex-direction: column;
+    margin-left: 2rem;
+    margin-right: 2rem;
+    }
+    .host-content{
+    text-align: center;
+    }
+    .host-content h3{
+    font-size: 1.5rem;
+    }
+    .host-icon{
+    text-align: center;
+    margin-left: 5.25rem;
+    }
 }
 
