--- a/styles/styles.css
+++ b/styles/styles.css
@@ -470,7 +470,8 @@ footer{
     }
     .hamburger img{
         display: block;
-        margin-left: 13rem;
+        margin-left: 10rem;
+        margin-right: 7rem;
     } 
     .new{
     font-size: 0.4rem;
